--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
